<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/forgot_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/forgot_title"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/forgot_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_title"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/forgot_edit_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/forgot_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_edit_email"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/login_button_state"
        android:padding="5dp"
        android:text="@string/register_submit"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>