<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_screen"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/login_header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_member_login_text"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_header_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/username_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <com.example.adwaz.widgets.CustomEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/password_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <LinearLayout
            android:id="@+id/login_btn_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_state"
                android:minWidth="120dp"
                android:padding="5dp"
                android:text="@string/login_login"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/login_button_state"
                android:minWidth="120dp"
                android:padding="5dp"
                android:text="@string/login_signup"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn_linear"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <com.example.adwaz.widgets.CustomCheckBox
                android:id="@+id/remember_me_check"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight=".5"
                android:src="@drawable/checkbox_state" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".5"
                android:gravity="center_vertical|left"
                android:text="@string/login_rememberme"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="2"
                android:gravity="center_vertical|left"
                android:text="@string/login_forgot_pswd"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="20dp"
        android:src="@drawable/login_icon"
        android:visibility="gone" />

</RelativeLayout>