<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <ImageView
                android:id="@+id/register_user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_image" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/register_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_first_name_edit"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_last_name_edit"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_email_edit"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <EditText
                    android:id="@+id/register_email_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/register_confirm_email_edit"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <com.example.adwaz.utils.HorizontalListView
            android:id="@+id/item_detail_tag_horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent" >
        </com.example.adwaz.utils.HorizontalListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register_customer_add_service_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_button_state"
                android:text="@string/customer_registration_add"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_customer_add_service_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/customer_registration_service_hint"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/register_customer_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/service_button_state"
            android:gravity="center"
            android:text="@string/register_submit"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>