<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_screen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <ImageView
                    android:id="@+id/register_user_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/register_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/register_first_name_edit"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <EditText
                        android:id="@+id/register_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/register_last_name_edit"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:gravity="center_vertical"
                        android:hint="@string/register_email_edit"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <EditText
                        android:id="@+id/register_email_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:gravity="center_vertical"
                        android:hint="@string/register_confirm_email_edit"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <com.example.adwaz.widgets.CustomEditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:gravity="center_vertical"
                        android:hint="@string/register_password_edit"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <com.example.adwaz.widgets.CustomEditText
                        android:id="@+id/register_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:gravity="center_vertical"
                        android:hint="@string/register_confirm_password_edit"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />

                    <EditText
                        android:id="@+id/register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:digits="0123456789"
                        android:gravity="center_vertical"
                        android:hint="@string/register_phone_edit"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/register_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/choose_category"
                android:drawSelectorOnTop="true" />

            <Spinner
                android:id="@+id/register_sub_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/choose_category" />

            <Button
                android:id="@+id/register_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_button_state"
                android:padding="10dp"
                android:text="@string/register_submit"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>